<resources>
    <string name="app_name">Noticias</string>

    <string name="inicio">Inicio</string>
    <string name="configuracion">Configuración</string>
    <string name="contenido">Contenido</string>
    <string name="archivo">Archivo</string>
    <string name="recientes">Recientes</string>
    <string name="favoritos">Favoritos</string>
    <string name="papelera">Papelera</string>

    <string name="fragmento_inicio">Fragmento Inicio</string>
    <string name="fragmento_configuracion">Fragmento Configuración</string>
    <string name="fragmento_contenido">Fragmento Contenido</string>
    <string name="fragmento_archivo">Fragmento Archivo</string>
    <string name="fragmento_favoritos">Fragmento Favoritos</string>
    <string name="fragmento_recientes">Fragmento Recientes</string>
    <string name="fragmento_papelera">Fragmento Papelera</string>
    <string name="link_a_contenido">Link a Contenido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
